--- a/source/slides/bogus-drug/index.html
+++ b/source/slides/bogus-drug/index.html
@@ -609,7 +609,7 @@ Bob moves unimportant details to configuration
   <li>Fearless refactoring</li>
 </ul></section><section><h1>Me</h1>
 </section><section><h1>@apohorecki<br>github.com/psyho</h1>
-</section><section><figure><img src="sckrk-large.png" alt="[sckrk]"></figure></section><section><figure><img src="hypnotoad.gif"><figcaption>you shall ask<br>questions now</figcaption></figure></section><section><h1>Thanks!</h1>
+</section><section><figure><img src="powow.png"></figure><footer>Software Consultant at <a href="http://www.powow.no">Powow</a></footer></section><section><figure><img src="sckrk-large.png" alt="[sckrk]"></figure></section><section><figure><img src="hypnotoad.gif"><figcaption>you shall ask<br>questions now</figcaption></figure></section><section><h1>Thanks!</h1>
 </section><style type="text/css">
   div.highlight {
     margin-bottom: 50px;
