--- a/source/slides/ppppp-drug/index.html
+++ b/source/slides/ppppp-drug/index.html
@@ -24,7 +24,9 @@
 </section><section><h1><emph>Ping-Pong</emph></h1>
 </section><section><h1>Red-green-refactor</h1>
 </section><section><h1>Keep engaged</h1>
-</section><section><figure><img src="hypnotoad.gif"><figcaption>you shall ask<br>questions now</figcaption></figure></section><section><h1>Thanks!</h1>
+</section><section><h1>Me</h1>
+</section><section><h1>@apohorecki<br>github.com/psyho</h1>
+</section><section><figure><img src="powow.png"></figure><footer>Software Consultant at <a href="http://www.powow.no">Powow</a></footer></section><section><figure><img src="hypnotoad.gif"><figcaption>you shall ask<br>questions now</figcaption></figure></section><section><h1>Thanks!</h1>
 </section><style type="text/css">
   emph {
     color: #08c;
