--- a/source/slides/ppppp-drug/slides.html
+++ b/source/slides/ppppp-drug/slides.html
@@ -85,6 +85,21 @@
 </section>
 
 <section>
+<h1>Me</h1>
+</section>
+
+<section>
+<h1>@apohorecki<br>github.com/psyho</h1>
+</section>
+
+<section>
+<figure>
+<img src="powow.png" />
+</figure>
+<footer>Software Consultant at <a href="http://www.powow.no">Powow</a></footer>
+</section>
+
+<section>
 <figure>
 <img src="hypnotoad.gif" />
 <figcaption>you shall ask<br>questions now</figcaption>
